CRUD Tipo Papel

--- a/gibizera/web/css/style.css
+++ b/gibizera/web/css/style.css
@@ -13,6 +13,7 @@ body {
   background: #2f3138;
   color: #2f3138;
   font-family: "Open Sans", sans-serif;
+  /*overflow: hidden!important;*/
 }
 
 a {
